setup remix playground

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "types",
+  "name": "@kinde/types",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
