--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.4.2"
+    "@types/node": "^22.4.2",
+    "nx": "^19.6.1"
   }
 }
