--- a/packages/remix/package.json
+++ b/packages/remix/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "@kinde/core",
+  "name": "@kinde/remix",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "type": "module",
   "exports": {
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/index.mjs"
+        "default": "./dist/index.js"
       },
       "require": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
+        "default": "./dist/index.cjs"
       }
     }
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && vite build"
   },
   "keywords": [],
@@ -35,6 +36,6 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@kinde/types": "workspace:*"
+    "@kinde/core": "workspace:*"
   }
 }
